--- a/Gestao_Centro_Saude.csproj
+++ b/Gestao_Centro_Saude.csproj
@@ -8,4 +8,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MySql.Data" Version="9.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="repository\" />
+  </ItemGroup>
+
 </Project>
